--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Grades/Index.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Grades/Index.cshtml
@@ -8,6 +8,7 @@
     <tr>
         <th>Учител</th>
         <th>Предмет</th>
+        <th>Причина</th>
         <th>Оценка</th>
         <th>Дата</th>
     </tr>
@@ -16,6 +17,7 @@
         <tr>
             <td>@grade.TeacherName</td>
             <td>@grade.SubjectName</td>
+            <td>@grade.ReasonAsString</td>
             <td>@grade.Value</td>
             <td>@grade.Date</td>
         </tr>
